force-app/main/default/objects/Lead_Square_Mapping__c/Lead_Square_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Lead Square Mapping</label>
</CustomObject>