force-app/main/default/objects/Lead_Square_Mapping__c/fields/IsDateField__c.field-meta.xml
<CustomField>
    <fullName>IsDateField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDateField</label>
    <type>Checkbox</type>
</CustomField>