force-app/main/default/objects/Lead_Square_Mapping__c/fields/Lead_Square_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Square_Field__c</fullName>
    <label>Lead Square Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>