force-app/main/default/objects/Lead_Square_Mapping__c/fields/SF_Lead_Field__c.field-meta.xml
<CustomField>
    <fullName>SF_Lead_Field__c</fullName>
    <label>SF Lead Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>